Bug fix for mobile display not fitting screen size

--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -41,7 +41,7 @@
   margin-left: 2rem;
   margin-right: 2rem;
   flex-shrink: 0;
-  width: 25rem;
+  max-width: inherit;
   display: flex;
   flex: 0 6 auto;
 }
